fixed overflow in the mr banner

--- a/src/comps/monthlyranks/monthlyranks.css
+++ b/src/comps/monthlyranks/monthlyranks.css
@@ -12,7 +12,7 @@
   padding: 0em 4em;
   background-color: #3D10E9;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2), 0px 0px 20px rgba(0, 0, 0, 0.1);
-  overflow: auto;
+  overflow: hidden;
 }
 #monthlyranks-banner::-webkit-scrollbar {
   display: none;
